# polyp-yolo

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .sonarignore  DEPLOYMENT.md  EVALUATION.md  LICENSE  Makefile  README.md  REPOSITORY_SIZE.md  TRAINING.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  yolo_data.yaml
.github/: copilot-instructions.md
configs/: kvasir.yaml
data/processed/labels/: train.cache  val.cache
data/processed/labels/train/: cjyzufihqquiw0a46jatrbwln.txt
data/test-set/videos/: Pediculado5.mpg  Polypileocecalvalve1.mpg  Polypvvv.mpg
models/polyp_yolov8n_clean/: args.yaml  results.csv
results/: Pediculado3_detections.csv  PolipoMSDz2_detections.csv  Polypileocecalvalve1_detections.csv  demo_detections.csv
scripts/: .mypy.ini  convert_masks_to_yolo.py  eval_val.py  infer_and_viz.py  split_train_val.py  video_infer_yolo.py
scripts/statistical-analysis/: README.md  create_system_overview_large_labels.py  enhance_original_plots.py  enhance_yolo_plots.py  enhance_yolo_validation_plots.py  generate_thesis_figures.py  regenerate_training_plots.py  requirements.txt
thesis-prep-docs/: README.md
thesis-prep-docs/draft-thesis/: Abbreviation.tex  IMAGE_ASSETS.md  Polyp_Detection_Thesis.tex  README.md  ch-abstract.tex  ch-acknowledgement.tex  ch-certificate_self.tex  ch-certificate_sup.tex  ch-mypub.tex  header.tex
thesis-prep-docs/draft-thesis/Reference/: Bibliography.bib
thesis-prep-docs/draft-thesis/chp1/: chp1.tex
thesis-prep-docs/draft-thesis/chp2/: chp2.tex
thesis-prep-docs/draft-thesis/chp3/: chp3.tex
thesis-prep-docs/draft-thesis/chp4/: chp4.tex
thesis-prep-docs/draft-thesis/chp5/: chp5.tex
thesis-prep-docs/draft-thesis/chp6/: chp6.tex
